# TheUnmagicalWand

./: .gitignore  AnimationComponent.hpp  App.cpp  App.hpp  Boss.hpp  CMakeLists.txt  Endscreen.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Hud.hpp  JsonParser.cpp  JsonParser.hpp  Level.cpp  Level.hpp  LineInterp.cpp  LineInterp.hpp  Main.cpp  MainMenu.cpp  MainMenu.hpp  Makefile  MenuHelp.cpp  MenuHelp.hpp  PhysicsComp.cpp  PhysicsComp.hpp  Pickup.hpp  Player.cpp  Player.hpp  README.md  ReadMe-ForDevs  SplashScreen.cpp  SplashScreen.hpp  TextureManager.cpp  TextureManager.hpp  TheUnmagicalWand  clang-format-all.sh  howToLevel  platform.cpp  platform.hpp  (+2 more)
art/player/: helpformyself
json/: cellar.json  kitchen.json  level1.json  library.json  menu.json  test.json  testLevel.json  testLevel2.json  texturelevel1.json
src/: App.cpp  App.hpp  Game.cpp  Game.hpp  Main.cpp  Menu.cpp  Menu.h  gui.h
src/Framework/: GameObject.cpp  GameObject.h  GameObjectBuilder.cpp  GameObjectBuilder.h  PhysicsWorld.cpp  PhysicsWorld.h  Transform.cpp  Transform.h
src/Framework/Builders/: GameObjectDirector.cpp  GameObjectDirector.h  PlatformBuilder.cpp  PlatformBuilder.h
src/Framework/Components/: AnimationComponent.hpp  (+6 more)
src/GameState/: GameState.cpp  GameState.h  Menu.cpp  Menu.h
src/LevelParsing/: JsonParser.hpp  LevelParser.cpp  LevelParser.h
src/Levels/: Level.cpp  Level.hpp  MainMenu.hpp  SplashScreen.cpp  SplashScreen.hpp
src/tools/: EnumTools.cpp  EnumTools.h  StringTools.cpp  StringTools.h  TextureManager.cpp  TextureManager.hpp
tools/src/: Makefile  main.cpp
(+6 files in other folders)
